Fixed layout issues

--- a/components/MapCanvas.module.css
+++ b/components/MapCanvas.module.css
@@ -15,21 +15,16 @@
  * along with Historical-Map. If not, see <http://www.gnu.org/licenses/>.
  */
 
-.canvasCenter
-{
-  left: 0;
-  min-height: 100%;
-  min-width: 100%;
-  position: absolute;
-  top: 0;
-  z-index: 2;
-}
-
 .canvasContainer
 {
   max-height: 100%;
   max-width: 100%;
   position: relative;
+}
+
+.canvasOverlay
+{
+  z-index: 10;
 }
 
 .controlsButton
@@ -40,13 +35,12 @@
     }
 }
 
-.controlsGroup
+.controlsContainer
 {
   background-color: var(--mantine-color-gray-9);
   bottom: 0;
   left: 0;
   min-width: 100%;
-  opacity: 0.70;
   position: absolute;
-  z-index: 3;
+  z-index: 30;
 }
