--- a/components/MapSpot.module.css
+++ b/components/MapSpot.module.css
@@ -28,7 +28,7 @@
 {
   position: absolute;
   border-radius: 100%;
-  z-index: 3;
+  z-index: 20;
 }
 
 .mapSpotPopoverDropdown
